// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`grid list renders children 1`] = `
<FlatList
  ItemSeparatorComponent={[Function]}
  animationDuration={500}
  animationInitialBackgroundColor="#FFFFFF"
  contentContainerStyle={false}
  data={
    Array [
      <Image
        source={
          Object {
            "uri": "https://...",
          }
        }
      />,
      <Image
        source={
          Object {
            "uri": "https://...",
          }
        }
      />,
    ]
  }
  disableVirtualization={false}
  horizontal={false}
  initialNumToRender={10}
  itemStyle={Object {}}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={3}
  onEndReachedThreshold={2}
  renderItem={[Function]}
  scrollEventThrottle={50}
  separatorBorderColor="#FFFFFF"
  separatorBorderWidth={0}
  showAnimation={false}
  showsVerticalScrollIndicator={false}
  updateCellsBatchingPeriod={50}
  windowSize={21}
>
  <Image
    source={
      Object {
        "uri": "https://...",
      }
    }
  />
  <Image
    source={
      Object {
        "uri": "https://...",
      }
    }
  />
</FlatList>
`;

exports[`grid list renders correctly 1`] = `
<FlatList
  ItemSeparatorComponent={[Function]}
  animationDuration={500}
  animationInitialBackgroundColor="#FFFFFF"
  contentContainerStyle={false}
  data={
    Array [
      Object {
        "id": 1,
        "thumbnail": Object {
          "uri": "https://...",
        },
      },
      Object {
        "id": 2,
        "thumbnail": Object {
          "uri": "https://...",
        },
      },
    ]
  }
  disableVirtualization={false}
  horizontal={false}
  initialNumToRender={10}
  itemStyle={Object {}}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={3}
  onEndReachedThreshold={2}
  renderItem={[Function]}
  scrollEventThrottle={50}
  separatorBorderColor="#FFFFFF"
  separatorBorderWidth={0}
  showAnimation={false}
  showsVerticalScrollIndicator={false}
  updateCellsBatchingPeriod={50}
  windowSize={21}
/>
`;

exports[`grid list renders empty list 1`] = `
<FlatList
  ItemSeparatorComponent={[Function]}
  animationDuration={500}
  animationInitialBackgroundColor="#FFFFFF"
  contentContainerStyle={false}
  data={Array []}
  disableVirtualization={false}
  horizontal={false}
  initialNumToRender={10}
  itemStyle={Object {}}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={3}
  onEndReachedThreshold={2}
  renderItem={[Function]}
  scrollEventThrottle={50}
  separatorBorderColor="#FFFFFF"
  separatorBorderWidth={0}
  showAnimation={false}
  showsVerticalScrollIndicator={false}
  updateCellsBatchingPeriod={50}
  windowSize={21}
/>
`;

exports[`grid list renders showAnimation 1`] = `
<FlatList
  ItemSeparatorComponent={[Function]}
  animationDuration={500}
  animationInitialBackgroundColor="#FFFFFF"
  contentContainerStyle={false}
  data={
    Array [
      Object {
        "id": 1,
        "thumbnail": Object {
          "uri": "https://...",
        },
      },
      Object {
        "id": 2,
        "thumbnail": Object {
          "uri": "https://...",
        },
      },
    ]
  }
  disableVirtualization={false}
  horizontal={false}
  initialNumToRender={10}
  itemStyle={Object {}}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={3}
  onEndReachedThreshold={2}
  renderItem={[Function]}
  scrollEventThrottle={50}
  separatorBorderColor="#FFFFFF"
  separatorBorderWidth={0}
  showAnimation={true}
  showsVerticalScrollIndicator={false}
  updateCellsBatchingPeriod={50}
  windowSize={21}
/>
`;

exports[`grid list renders showAnimation with duration and initialBackground setted 1`] = `
<FlatList
  ItemSeparatorComponent={[Function]}
  animationDuration={1000}
  animationInitialBackgroundColor="beige"
  contentContainerStyle={false}
  data={
    Array [
      Object {
        "id": 1,
        "thumbnail": Object {
          "uri": "https://...",
        },
      },
      Object {
        "id": 2,
        "thumbnail": Object {
          "uri": "https://...",
        },
      },
    ]
  }
  disableVirtualization={false}
  horizontal={false}
  initialNumToRender={10}
  itemStyle={Object {}}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={3}
  onEndReachedThreshold={2}
  renderItem={[Function]}
  scrollEventThrottle={50}
  separatorBorderColor="#FFFFFF"
  separatorBorderWidth={0}
  showAnimation={true}
  showsVerticalScrollIndicator={false}
  updateCellsBatchingPeriod={50}
  windowSize={21}
/>
`;

exports[`grid list renders showSeparator 1`] = `
<FlatList
  ItemSeparatorComponent={[Function]}
  animationDuration={500}
  animationInitialBackgroundColor="#FFFFFF"
  contentContainerStyle={
    Object {
      "borderBottomWidth": 0,
      "borderColor": "#FFFFFF",
      "borderRightWidth": 0,
      "borderTopWidth": 0,
    }
  }
  data={
    Array [
      Object {
        "id": 1,
        "thumbnail": Object {
          "uri": "https://...",
        },
      },
      Object {
        "id": 2,
        "thumbnail": Object {
          "uri": "https://...",
        },
      },
    ]
  }
  disableVirtualization={false}
  horizontal={false}
  initialNumToRender={10}
  itemStyle={Object {}}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={3}
  onEndReachedThreshold={2}
  renderItem={[Function]}
  scrollEventThrottle={50}
  separatorBorderColor="#FFFFFF"
  separatorBorderWidth={0}
  showAnimation={false}
  showsVerticalScrollIndicator={false}
  updateCellsBatchingPeriod={50}
  windowSize={21}
/>
`;

exports[`grid list renders showSeparator with border and width setted 1`] = `
<FlatList
  ItemSeparatorComponent={[Function]}
  animationDuration={500}
  animationInitialBackgroundColor="#FFFFFF"
  contentContainerStyle={
    Object {
      "borderBottomWidth": 5,
      "borderColor": "tomato",
      "borderRightWidth": 5,
      "borderTopWidth": 5,
    }
  }
  data={
    Array [
      Object {
        "id": 1,
        "thumbnail": Object {
          "uri": "https://...",
        },
      },
      Object {
        "id": 2,
        "thumbnail": Object {
          "uri": "https://...",
        },
      },
    ]
  }
  disableVirtualization={false}
  horizontal={false}
  initialNumToRender={10}
  itemStyle={Object {}}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={3}
  onEndReachedThreshold={2}
  renderItem={[Function]}
  scrollEventThrottle={50}
  separatorBorderColor="tomato"
  separatorBorderWidth={5}
  showAnimation={false}
  showsVerticalScrollIndicator={false}
  updateCellsBatchingPeriod={50}
  windowSize={21}
/>
`;
